tdf#147041 Always show navigated heading at top of visible view area

Revert to pre commit 1df2581cfffc87386c6de7614793b2d664244e5a behavior

Change-Id: I06fe630bf0c0e611351e0e9a56361a3028f207d9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129129
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>